prevent overflow-x body

--- a/site/src/components/assets/scss/common/_body.scss
+++ b/site/src/components/assets/scss/common/_body.scss
@@ -15,6 +15,9 @@ body{ overflow-x: visible}
         // margin: 0 $margins-desktop!important;
         background-color: $background-site;
         top: 0!important;
+        max-width: 100vw;
+        width: 100vw;
+        overflow-x: hidden;
     }
 }
 [data-type="news"] .type::before, 
